datasets/dataset_txt/requests/requests_64.txt
pilot1981 commented on Aug 8, 2019
Hi,
from HASSIO installation with python 3.7.3 I'm trying to launch this request:
python3 -c "import requests; print(requests.get(‘http://192.168.1.107/?action=command&command=value_temperature').text)"
but I obtain this error:
Command executed: python3 -c "import requests; print(requests.get(‘http://192.168.1.107/?action=command&command=value_temperature').text)": 1
File "", line 1
import requests; print(requests.get(‘http://192.168.1.107/?action=command&command=value_temperature').text)
^
SyntaxError: invalid character in identifier
with previous versions all worked fine...
Anyone can help me? syntax is changed?